# pixello

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  exceptions.hpp  pixello.cpp  pixello.hpp
tests/: CMakeLists.txt  isometric.cpp  test.cpp
